Project file update

--- a/App/Deploy App on GCP/Dockerfile
+++ b/App/Deploy App on GCP/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7
 
-WORKDIR /app
+WORKDIR /app/
 
 COPY requirements.txt ./requirements.txt
 
@@ -9,7 +9,7 @@ RUN pip3 install -r requirements.txt
 
 EXPOSE 8080
 
-COPY . /app
+COPY . /app/
 
 
 CMD streamlit run --server.port 8080 --server.enableCORS false app.py
